requirements.txt update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,18 @@
+xgboost
 chardet==3.0.4
 charset==1.0.1
 decorator==4.3.0
 ecdsa==0.13
 enum34==1.1.6
 funcsigs==1.0.2
-futures==3.2.0
 gast==0.2.0
 html5lib==0.9999999
-idna==2.6
-ipython-genutils==0.2.0
-jsonschema==2.6.0
-jupyter-core==4.4.0
-lazy-object-proxy==1.2.1
-logilab-common==1.1.0
-Markdown==2.6.11
-meld==3.14.2
-mock==2.0.0
-nbformat==4.4.0
 numpy==1.13.3
-paramiko==1.16.0
-pbr==4.0.2
-pexpect==4.0.1
 plotly==2.5.1
-ptyprocess==0.5
-pycrypto==2.6.1
-pycurl==7.43.0
-pydot-ng==1.0.0
-pydotplus==2.0.2
-pygobject==3.20.0
-pylint==1.5.2
-pyodbc==3.0.7
-pyparsing==2.2.0
-Pyste==0.9.10
-python-apt==1.1.0b1
-python-dateutil==2.7.3
-pytz==2018.4
-requests==2.18.4
 scipy==1.0.1
 six==1.11.0
 tensorboard==1.7.0
 tensorflow==1.7.0
 tensorflow-tensorboard==0.4.0rc3
-termcolor==1.1.0
 tqdm==4.19.4
-traitlets==4.3.2
-unity-lens-photos==1.0
-urllib3==1.22
 virtualenv==15.0.1
-xgboost==0.7.post4
