--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
 xgboost
-chardet==3.0.4
-charset==1.0.1
-decorator==4.3.0
-ecdsa==0.13
-enum34==1.1.6
-funcsigs==1.0.2
-gast==0.2.0
-html5lib==0.9999999
-numpy==1.13.3
-plotly==2.5.1
-scipy==1.0.1
-six==1.11.0
-tensorboard==1.7.0
-tensorflow==1.7.0
-tensorflow-tensorboard==0.4.0rc3
-tqdm==4.19.4
-virtualenv==15.0.1
+numpy
+plotly
+scipy
+six
+tensorflow
+tensorflow-tensorboard
+tqdm
